# openstackbench

./: .cursorignore  .env.sample  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: after_response.py  analysis_path_redirector.py  analyst_json_validator.py  tool_logger.py
.claude/tests/: README.md  test_after_response_hook.sh  test_analyst_json_validator.sh  test_hooks.py
docs/: ANALYSIS_JSON_SPECIFICATION.md  CNAME  _config.yml  index.html  prd.md  tech-spec.md
docs/_layouts/: default.html
docs/tutorials/: 0.getting-started.md  1.cursor-workflow.md  1.how-stackbench-works.md  2.cli-commands.md  2.how-stackbench-works.md  3.cli-commands.md
src/stackbench/: __init__.py  cli.py  config.py
src/stackbench/agents/: __init__.py  base.py  cursor_ide.py
src/stackbench/analyzers/: __init__.py  claude_analyzer.py  individual_analyzer.py  models.py  overall_analyzer.py
src/stackbench/core/: __init__.py  repository.py  run_context.py
src/stackbench/extractors/: __init__.py  extractor.py  models.py  modules.py  signatures.py  utils.py
src/stackbench/storage/: __init__.py
src/stackbench/utils/: __init__.py
tests/: __init__.py  test_claude_analyzer.py  test_execution_detection.py  test_repository.py
tests/test_extractors/: __init__.py  test_extractor.py  test_models.py  test_modules.py  test_utils.py
