[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stackbench"
version = "0.1.0"
description = "Open source local deployment tool for benchmarking coding agents on library-specific tasks"
authors = [
    {name = "OpenStackBench Contributors"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
    "dspy-ai>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "gitpython>=3.1.0",
    "pytest>=8.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
stackbench = "stackbench.cli:main"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = []
